# ggblas

./: Cargo.toml  README.md  README.tpl  build.rs
.github/workflows/: bench.yaml  rust.yaml
benches/: matmul.rs
dev/bench/: data.js
src/: lib.rs  raw.rs  wasm_pool.rs
src/ggml/: avx.rs  avx_f16.rs  mod.rs  neon.rs  raw.rs  simd128_f16.rs
