[package]
name = "ggblas"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/Narsil/ggblas"
repository = "https://github.com/Narsil/ggblas"
documentation = "https://docs.rs/ggblas/"
license = "Apache-2.0"
keywords = ["blas", "ml", "ggml", "avx", "neon"]
readme = "./README.md"
description = """
Matrix multiplicatiosn in simple pure rust multithreadded blas-like interface.
Exploits intrinsics on available targets.
"""
exclude = [ "rust-toolchain", "target/*", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false, optional = true }
cblas-sys = { version = "0.1.4", default-features = false, optional= true }
threadpool = "1.8.1"
num_cpus = "1.15.0"
core_affinity = "0.8.0"
matrixmultiply = { version = "0.3.2", features = ["threading"], optional=true }
faer-core = { version = "0.7.0", optional = true }
half = { version = "2.3.1", features = ["use-intrinsics"] }

[dev-dependencies]
num_cpus = "1.15.0"

[features]
default = []
intel-mkl = ["dep:cblas-sys", "dep:libc"]
cblas = ["dep:cblas-sys", "dep:libc"]
faer-rs = ["dep:faer-core"]
